tests/NormalTests/paczka1/fuzzy1/35219724.err
Error in line 5: NGh A165 52,0
Error in line 22: A165 S105 3$,6
Error in line 21: A165 S452 94,4
Error in line 17: o1gAcw9Rm A165 61,3
Error in line 16: MbTpwX S105 19,0
Error in line 29: o1gAcw9Rm S105 68,2
